# biliup

./: README.md  pyproject.toml
src/biliup/: __init__.py  main.py
