[project]
name = "biliup"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GrahLnn", email = "grahlnn@skiff.com"},
]
dependencies = [
    "drissionpage>=4.0.5.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
